force-app/main/default/objects/Account_Rating_Layout__c/Account_Rating_Layout__c.object-meta.xml
<CustomObject>
    <label>Account Rating Layout</label>
    <nameField>
        <displayFormat>ARL-{00000}</displayFormat>
        <label>Account Rating Layout Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Rating Layouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>