force-app/main/default/objects/Account_Rating_Layout__c/fields/Is_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, used as the fallback layout for the layout type.</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>