force-app/main/default/objects/Account_Rating_Layout__c/fields/Layout_Title__c.field-meta.xml
<CustomField>
    <fullName>Layout_Title__c</fullName>
    <description>Display name for this rating layout configuration.</description>
    <label>Layout Title</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>