force-app/main/default/objects/Account_Rating_Layout__c/fields/Layout_Type__c.field-meta.xml
<CustomField>
    <fullName>Layout_Type__c</fullName>
    <description>Target data object for this layout.</description>
    <label>Layout Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Territory Fields</fullName>
                <default>true</default>
                <label>Account Territory Fields</label>
            </value>
            <value>
                <fullName>Account Territory Product Fields</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>