force-app/main/default/objects/Account_Rating_Layout__c/fields/Product2_Id__c.field-meta.xml
<CustomField>
    <fullName>Product2_Id__c</fullName>
    <description>Optional Product2 scope for product rating layouts.</description>
    <inlineHelpText>Used for Account Territory Product Fields layouts.</inlineHelpText>
    <label>Product</label>
    <length>18</length>
    <type>Text</type>
</CustomField>