force-app/main/default/objects/Account_Rating_Layout__c/fields/Territory2_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory2_Id__c</fullName>
    <description>Optional Territory2 scope for this layout.</description>
    <inlineHelpText>Leave blank for a global default layout.</inlineHelpText>
    <label>Territory</label>
    <length>18</length>
    <type>Text</type>
</CustomField>